instructions.Instructions.scala.error
Compilation error:
Instructions:5: error: '(' expected but identifier found.
for n=0 to n=2
    ^Instructions:12: error: '(' expected but identifier found.
for n=0 to n=2
    ^Instructions:19: error: '(' expected but identifier found.
for n=0 to n=2
    ^