instructions.Instructions.scala.code
forward()
brushdown()
right()

for n=0 to n=2
{
  n=0
  backward()
  n=n+1
}

for n=0 to n=2
{
  n=0
  left()
  n=n+1
}

for n=0 to n=2
{
  n=0
  forward()
  n=n+1
}

right()
brushup()
backward()